added scroll easing on click of a link

--- a/index.html
+++ b/index.html
@@ -5,20 +5,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="js/click-scroll.js" charset="utf-8"></script>
   <link rel="stylesheet" href="css/master.css">
+  <script src="js/main.js" charset="utf-8"></script>
 
   <title>Zabrina Lagamayo</title>
 </head>
 
 <body>
   <div class="container">
-    <div id="first-section">
+
+    <div id="section_1" class="box">
+
         <div id="overlay">
+
+          <div id="name">
+          <h1>Zabrina Lagamayo</h1>
+          <h2>Web Developer</h2>
+          </div>
     <svg id="home-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1400 300" preserveAspectRatio="none">
         <path class="p-curve" d="M-0.2,0.5c0,0-21.7,99.6,233.1,99.6s320.1,199.7,467.6,200.1S898.6,100,1167.6,100S1401,0,1401,0v301H0 L-0.2,0.5z"></path>
     </svg>
     </div>
+    <nav>
+      <a class="active" href="#section_1">Home</a>
+      <a href="#section_2">Portfolio</a>
+      <a href="#section_3">Skills</a>
+      <a href="#section_4">Contacts</a>
+
+    </nav>
+    <div id="section_2" class="box">
+      portfolio
+    </div>
+    <div id="section_3" class="box">
+      Skills
+    </div>
+    <div id="section_4" class="box">
+      contacts
+    </div>
+
+
+
     </div>
 
 
