added nav bar bix and added a video for tictactoe

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="js/click-scroll.js" charset="utf-8"></script>
   <link rel="stylesheet" href="css/master.css">
   <script src="js/main.js" charset="utf-8"></script>
 
@@ -24,25 +23,40 @@
           <div id="name">
           <h1>Zabrina Lagamayo</h1>
           <h2>Web Developer</h2>
+
+          <svg id="arrow" aria-hidden="true" data-prefix="fas" data-icon="angle-double-down" class="svg-inline--fa fa-angle-double-down fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path id="arrowpath" d="M143 256.3L7 120.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0L313 86.3c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.4 9.5-24.6 9.5-34 .1zm34 192l136-136c9.4-9.4 9.4-24.6 0-33.9l-22.6-22.6c-9.4-9.4-24.6-9.4-33.9 0L160 352.1l-96.4-96.4c-9.4-9.4-24.6-9.4-33.9 0L7 278.3c-9.4 9.4-9.4 24.6 0 33.9l136 136c9.4 9.5 24.6 9.5 34 .1z"></path>
+
+          </svg>
+
+
           </div>
+
     <svg id="home-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1400 300" preserveAspectRatio="none">
         <path class="p-curve" d="M-0.2,0.5c0,0-21.7,99.6,233.1,99.6s320.1,199.7,467.6,200.1S898.6,100,1167.6,100S1401,0,1401,0v301H0 L-0.2,0.5z"></path>
     </svg>
     </div>
     <nav>
-      <a class="active" href="#section_1">Home</a>
-      <a href="#section_2">Portfolio</a>
-      <a href="#section_3">Skills</a>
-      <a href="#section_4">Contacts</a>
+      <a id="1" class="active" href="#section_1">Home</a>
+      <a id="2" href="#section_2">About Me</a>
+      <a id="3" href="#section_3">Portfolio</a>
+      <a id="4" href="#section_4">Skills</a>
+      <a id="5" href="#section_5">Contacts</a>
 
     </nav>
-    <div id="section_2" class="box">
-      portfolio
-    </div>
+
+      <div id="section_2" class="box">
+        <img class="photo"src="images/zabrina4.png" alt="zabrina picture">
+
+      </div>
     <div id="section_3" class="box">
-      Skills
+      <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank"><video loop id = "video">
+         <source src="images/tictactoe.mp4" type="video/mp4" />
+      </video></a>
     </div>
     <div id="section_4" class="box">
+      Skills
+    </div>
+    <div id="section_5" class="box">
       contacts
     </div>
 
