--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  
+
   <link rel="stylesheet" href="css/master.css">
   <script src="js/main.js" charset="utf-8"></script>
 
@@ -47,6 +47,13 @@
 
       <div id="section_2" class="box">
         <img class="photo"src="images/zabrina4.png" alt="zabrina picture">
+        <div class="about-me">
+          <h2>About Me: Zabrina Lagamayo</h2>
+          <p id="title">Web Developer</p>
+          <p>I am analytical and inquisitive by nature which has led me to the wonderful path of Web Development. While working as a Market Researcher, I taught myself how to code VBA to improve work efficiencies. I then tried to teach myself JavaScript, Python and also dabbled a bit in trying to create a mechanical arm in my spare time but I quickly realised I needed to learn the fundamentals of programming and so I joined General Assembly.</p>
+          <p>I have always liked the idea of creating. Since undergoing the Web Development Immersive Course in General Assembly, I have come to appreciate the ability to create even more. Being challenged, overcoming the challenge and seeing the product of hardwork gives me a great sense of achievement. I would love to work for a company that nurtures growth and learning. </p>
+
+        </div>
 
       </div>
     <div id="section_3" class="box">
