added dashboard video

--- a/index.html
+++ b/index.html
@@ -64,9 +64,26 @@
 
       </div>
     <div id="section_3" class="box">
+      <h1> Portfolio Work </h1>
+      <div id="tictactoe">
       <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank"><video loop id = "video">
          <source src="images/tictactoe.mp4" type="video/mp4" />
       </video></a>
+      <div class="links">
+      <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> |
+      <a href="https://github.com/zabrinatan/tic-tac-toe">Github</a>
+    </div>
+    </div>
+
+    <div id="dashboard">
+    <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank"><video loop id = "video">
+       <source src="images/dashboard.mp4" type="video/mp4" />
+    </video></a>
+    <div class="links">
+    <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> |
+    <a href="https://github.com/zabrinatan/tic-tac-toe">Github</a>
+  </div>
+  </div>
     </div>
     <div id="section_4" class="box">
       Skills
