added videos for meet you and lose it

--- a/index.html
+++ b/index.html
@@ -84,6 +84,25 @@
     <a href="https://github.com/zabrinatan/tic-tac-toe">Github</a>
   </div>
   </div>
+
+  <div id="meetyou">
+  <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank"><video loop id = "video">
+     <source src="images/meetyou.mp4" type="video/mp4" />
+  </video></a>
+  <div class="links">
+  <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> |
+  <a href="https://github.com/zabrinatan/tic-tac-toe">Github</a>
+</div>
+
+<div id="loseit">
+<a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank"><video loop id = "video">
+   <source src="images/loseit.mp4" type="video/mp4" />
+</video></a>
+<div class="links">
+<a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> |
+<a href="https://github.com/zabrinatan/tic-tac-toe">Github</a>
+</div>
+</div>
     </div>
     <div id="section_4" class="box">
       Skills
