added all components for portfolio

--- a/index.html
+++ b/index.html
@@ -71,39 +71,51 @@
       </video></a>
       <div class="links">
       <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> |
-      <a href="https://github.com/zabrinatan/tic-tac-toe">Github</a>
+      <a href="https://github.com/zabrinatan/tic-tac-toe" target="_blank">Github</a>
     </div>
     </div>
 
     <div id="dashboard">
-    <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank"><video loop id = "video">
+    <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank"><video loop id = "video">
        <source src="images/dashboard.mp4" type="video/mp4" />
     </video></a>
     <div class="links">
-    <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> |
-    <a href="https://github.com/zabrinatan/tic-tac-toe">Github</a>
+    <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank">Live Site</a> |
+    <a href="https://github.com/zabrinatan/travel_book" target="_blank">Github</a>
   </div>
   </div>
 
   <div id="meetyou">
-  <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank"><video loop id = "video">
+  <a href="https://todo-meetyou.herokuapp.com/" target="_blank"><video loop id = "video">
      <source src="images/meetyou.mp4" type="video/mp4" />
   </video></a>
   <div class="links">
-  <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> |
-  <a href="https://github.com/zabrinatan/tic-tac-toe">Github</a>
+  <a href="https://todo-meetyou.herokuapp.com/" target="_blank">Live Site</a> |
+  <a href="https://github.com/zabrinatan/dating-web" target="_blank">Github</a>
 </div>
+  </div>
 
 <div id="loseit">
-<a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank"><video loop id = "video">
+<a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank"><video loop id = "video">
    <source src="images/loseit.mp4" type="video/mp4" />
 </video></a>
 <div class="links">
-<a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> |
-<a href="https://github.com/zabrinatan/tic-tac-toe">Github</a>
+<a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">Live Site</a> |
+<a href="https://github.com/zabrinatan/lose-it-client" target="_blank">Github</a>
 </div>
 </div>
-    </div>
+<div id="portfolio">
+<a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">
+   <img src="images/portfolio.png"/>
+</a>
+<div class="links">
+<a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">Live Site</a> |
+<a href="https://github.com/zabrinatan/lose-it-client" target="_blank">Github</a>
+</div>
+</div>
+</div>
+
+
     <div id="section_4" class="box">
       Skills
     </div>
@@ -113,7 +125,6 @@
 
 
 
-    </div>
 
 
 
