added slick for portfolio section

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <link rel="stylesheet" href="css/slick-theme.css">
+  <link rel="stylesheet" href="css/slick.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
 
   <link rel="stylesheet" href="css/master.css">
+  <script src="js/slick.js" charset="utf-8"></script>
   <script src="js/main.js" charset="utf-8"></script>
 
   <title>Zabrina Lagamayo</title>
@@ -65,52 +70,56 @@
       </div>
     <div id="section_3" class="box">
       <h1> Portfolio Work </h1>
+      <div class="portfolio-carousel">
       <div id="tictactoe">
       <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank"><video loop id = "video">
          <source src="images/tictactoe.mp4" type="video/mp4" />
       </video></a>
-      <div class="links">
-      <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> |
-      <a href="https://github.com/zabrinatan/tic-tac-toe" target="_blank">Github</a>
-    </div>
+      <div class="port-content">
+        <h3>Tic-Tac-Toe <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/tic-tac-toe" target="_blank">Github</a></h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatum voluptate doloribus, sunt, necessitatibus, quia illo sequi ex quaerat aliquam laboriosam. Inventore mollitia, ratione incidunt rerum illo, minima alias dolorem.</p></div>
+
     </div>
 
     <div id="dashboard">
     <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank"><video loop id = "video">
        <source src="images/dashboard.mp4" type="video/mp4" />
     </video></a>
-    <div class="links">
-    <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank">Live Site</a> |
-    <a href="https://github.com/zabrinatan/travel_book" target="_blank">Github</a>
-  </div>
+    <div class="port-content">
+      <h3>Travel-Book <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/travel_book" target="_blank">Github</a></h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatum voluptate doloribus, sunt, necessitatibus, quia illo sequi ex quaerat aliquam laboriosam. Inventore mollitia, ratione incidunt rerum illo, minima alias dolorem.</p></div>
   </div>
 
   <div id="meetyou">
   <a href="https://todo-meetyou.herokuapp.com/" target="_blank"><video loop id = "video">
      <source src="images/meetyou.mp4" type="video/mp4" />
   </video></a>
-  <div class="links">
-  <a href="https://todo-meetyou.herokuapp.com/" target="_blank">Live Site</a> |
-  <a href="https://github.com/zabrinatan/dating-web" target="_blank">Github</a>
-</div>
+  <div class="port-content">
+    <h3>Todo: Meet you <a href="https://todo-meetyou.herokuapp.com/" target="_blank">Live Site</a> |
+    <a href="https://github.com/zabrinatan/dating-web" target="_blank">Github</a></h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatum voluptate doloribus, sunt, necessitatibus, quia illo sequi ex quaerat aliquam laboriosam. Inventore mollitia, ratione incidunt rerum illo, minima alias dolorem.</p></div>
+
   </div>
 
 <div id="loseit">
 <a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank"><video loop id = "video">
    <source src="images/loseit.mp4" type="video/mp4" />
 </video></a>
-<div class="links">
-<a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">Live Site</a> |
-<a href="https://github.com/zabrinatan/lose-it-client" target="_blank">Github</a>
+<div class="port-content">
+  <h3>Lose it! <a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/lose-it-client" target="_blank">Github</a></h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatum voluptate doloribus, sunt, necessitatibus, quia illo sequi ex quaerat aliquam laboriosam. Inventore mollitia, ratione incidunt rerum illo, minima alias dolorem.</p></div>
+
 </div>
-</div>
+
 <div id="portfolio">
-<a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">
+<a href="https://zabrinatan.github.io/" target="_blank">
    <img src="images/portfolio.png"/>
 </a>
-<div class="links">
-<a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">Live Site</a> |
-<a href="https://github.com/zabrinatan/lose-it-client" target="_blank">Github</a>
+<div class="port-content">
+  <h3>Portfolio <a href="https://zabrinatan.github.io/" target="_blank">Live Site</a> |
+  <a href="https://github.com/zabrinatan/zabrinatan.github.io" target="_blank">Github</a></h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatum voluptate doloribus, sunt, necessitatibus, quia illo sequi ex quaerat aliquam laboriosam. Inventore mollitia, ratione incidunt rerum illo, minima alias dolorem.</p></div>
+
 </div>
 </div>
 </div>
