fixed portfolio slick format

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <h1> Portfolio Work </h1>
       <div class="portfolio-carousel">
       <div id="tictactoe">
-      <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank"><video loop id = "video">
+      <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank"><video loop id = "video1"  autoplay>
          <source src="images/tictactoe.mp4" type="video/mp4" />
       </video></a>
       <div class="port-content">
@@ -82,7 +82,7 @@
     </div>
 
     <div id="dashboard">
-    <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank"><video loop id = "video">
+    <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank"><video loop id = "video2"  autoplay>
        <source src="images/dashboard.mp4" type="video/mp4" />
     </video></a>
     <div class="port-content">
@@ -91,7 +91,7 @@
   </div>
 
   <div id="meetyou">
-  <a href="https://todo-meetyou.herokuapp.com/" target="_blank"><video loop id = "video">
+  <a href="https://todo-meetyou.herokuapp.com/" target="_blank"><video loop id = "video3">
      <source src="images/meetyou.mp4" type="video/mp4" />
   </video></a>
   <div class="port-content">
@@ -102,7 +102,7 @@
   </div>
 
 <div id="loseit">
-<a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank"><video loop id = "video">
+<a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank"><video loop id = "video4">
    <source src="images/loseit.mp4" type="video/mp4" />
 </video></a>
 <div class="port-content">
