added technologies for each portfolio piece

--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
       </video></a>
       <div class="port-content">
         <h3>Tic-Tac-Toe <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/tic-tac-toe" target="_blank">Github</a></h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatum voluptate doloribus, sunt, necessitatibus, quia illo sequi ex quaerat aliquam laboriosam. Inventore mollitia, ratione incidunt rerum illo, minima alias dolorem.</p></div>
+        <div class="tech"><span>jQuery</span> <span>HTML5/CSS3</span> <span>Javascript</span></div>
+        <p>This is the first project I have created. I have thoroughly enjoyed creating the logic of the game as well as playing around with design ideas. Through this project, I have improved my HTML/CSS and Javascript/JQuery Skills.</p>
+
+
+
+
+      </div>
 
     </div>
 
@@ -87,6 +93,7 @@
     </video></a>
     <div class="port-content">
       <h3>Travel-Book <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/travel_book" target="_blank">Github</a></h3>
+        <div class="tech"><span>jQuery</span> <span>HTML5/CSS3</span> <span>Ruby on Rails</span><span>Javascript</span><span>Google Geocoder API</span><span>Google Maps API</span> <span>Google Places API</span><span>Openweathermap API</span><span>Flickr Images</span></div>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatum voluptate doloribus, sunt, necessitatibus, quia illo sequi ex quaerat aliquam laboriosam. Inventore mollitia, ratione incidunt rerum illo, minima alias dolorem.</p></div>
   </div>
 
@@ -97,9 +104,11 @@
   <div class="port-content">
     <h3>Todo: Meet you <a href="https://todo-meetyou.herokuapp.com/" target="_blank">Live Site</a> |
     <a href="https://github.com/zabrinatan/dating-web" target="_blank">Github</a></h3>
+            <div class="tech"><span>jQuery</span> <span>HTML5/SassyCSS</span> <span>Ruby on Rails</span><span>Javascript</span><span>AJAX</span><span>Google Maps API</span> <span>Slick.js</span><span>Open Trivia Database API</span><span>Cloudinary</span><span>Attachinary</span></div>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatum voluptate doloribus, sunt, necessitatibus, quia illo sequi ex quaerat aliquam laboriosam. Inventore mollitia, ratione incidunt rerum illo, minima alias dolorem.</p></div>
 
   </div>
+
 
 <div id="loseit">
 <a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank"><video loop id = "video4">
@@ -107,6 +116,7 @@
 </video></a>
 <div class="port-content">
   <h3>Lose it! <a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/lose-it-client" target="_blank">Github</a></h3>
+  <div class="tech"><span>React.js</span><span>Ruby on Rails</span><span>HTML5/CSS3</span> <span>Javascript</span><span>Edamam Recipe API</span></div>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatum voluptate doloribus, sunt, necessitatibus, quia illo sequi ex quaerat aliquam laboriosam. Inventore mollitia, ratione incidunt rerum illo, minima alias dolorem.</p></div>
 
 </div>
@@ -118,6 +128,7 @@
 <div class="port-content">
   <h3>Portfolio <a href="https://zabrinatan.github.io/" target="_blank">Live Site</a> |
   <a href="https://github.com/zabrinatan/zabrinatan.github.io" target="_blank">Github</a></h3>
+  <div class="tech"><span>JQuery</span><span>Javascript</span><span>HTML5/CSS3</span> <span>Slick.js</span></div>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatum voluptate doloribus, sunt, necessitatibus, quia illo sequi ex quaerat aliquam laboriosam. Inventore mollitia, ratione incidunt rerum illo, minima alias dolorem.</p></div>
 
 </div>
