added icons for tech skills

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/slick-theme.css">
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 
   <link rel="stylesheet" href="css/master.css">
   <script src="js/slick.js" charset="utf-8"></script>
@@ -93,7 +93,7 @@
     </video></a>
     <div class="port-content">
       <h3>Travel-Book <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/travel_book" target="_blank">Github</a></h3>
-        <div class="tech"><span>jQuery</span> <span>HTML5/CSS3</span> <span>Ruby on Rails</span><span>Javascript</span><span>Google Geocoder API</span><span>Google Maps API</span> <span>Google Places API</span><span>Openweathermap API</span><span>Flickr Images</span></div>
+        <div class="tech"><span>jQuery</span><span>HTML5/CSS3</span> <span>Ruby on Rails</span><span>PostgreSQL</span><span>Javascript</span><span>Google Geocoder API</span><span>Google Maps API</span> <span>Google Places API</span><span>Openweathermap API</span><span>Flickr Images</span></div>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatum voluptate doloribus, sunt, necessitatibus, quia illo sequi ex quaerat aliquam laboriosam. Inventore mollitia, ratione incidunt rerum illo, minima alias dolorem.</p></div>
   </div>
 
@@ -104,7 +104,7 @@
   <div class="port-content">
     <h3>Todo: Meet you <a href="https://todo-meetyou.herokuapp.com/" target="_blank">Live Site</a> |
     <a href="https://github.com/zabrinatan/dating-web" target="_blank">Github</a></h3>
-            <div class="tech"><span>jQuery</span> <span>HTML5/SassyCSS</span> <span>Ruby on Rails</span><span>Javascript</span><span>AJAX</span><span>Google Maps API</span> <span>Slick.js</span><span>Open Trivia Database API</span><span>Cloudinary</span><span>Attachinary</span></div>
+            <div class="tech"><span>jQuery</span> <span>HTML5/SassyCSS</span> <span>Ruby on Rails</span><span>PostgreSQL</span><span>Javascript</span><span>AJAX</span><span>Google Maps API</span> <span>Slick.js</span><span>Open Trivia Database API</span><span>Cloudinary</span><span>Attachinary</span></div>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatum voluptate doloribus, sunt, necessitatibus, quia illo sequi ex quaerat aliquam laboriosam. Inventore mollitia, ratione incidunt rerum illo, minima alias dolorem.</p></div>
 
   </div>
@@ -116,7 +116,7 @@
 </video></a>
 <div class="port-content">
   <h3>Lose it! <a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/lose-it-client" target="_blank">Github</a></h3>
-  <div class="tech"><span>React.js</span><span>Ruby on Rails</span><span>HTML5/CSS3</span> <span>Javascript</span><span>Edamam Recipe API</span></div>
+  <div class="tech"><span>React.js</span><span>Ruby on Rails</span><span>PostgreSQL</span><span>HTML5/CSS3</span> <span>Javascript</span><span>Edamam Recipe API</span></div>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatum voluptate doloribus, sunt, necessitatibus, quia illo sequi ex quaerat aliquam laboriosam. Inventore mollitia, ratione incidunt rerum illo, minima alias dolorem.</p></div>
 
 </div>
@@ -137,7 +137,27 @@
 
 
     <div id="section_4" class="box">
-      Skills
+      <h1>Tech Skills</h1>
+      <div class="icons">
+        <i class="devicon-atom-original-wordmark colored"></i>
+        <i class="devicon-bootstrap-plain-wordmark colored"></i>
+        <i class="devicon-css3-plain-wordmark colored"></i>
+        <i class="devicon-git-plain-wordmark colored"></i>
+        <i class="devicon-github-plain-wordmark colored"></i>
+        <i class="devicon-heroku-plain-wordmark colored"></i>
+        <i class="devicon-html5-plain-wordmark colored"></i>
+        <i class="devicon-javascript-plain colored"></i>
+        <i class="devicon-jquery-plain-wordmark colored"></i>
+        <i class="devicon-postgresql-plain-wordmark colored"></i>
+        <i class="devicon-react-original-wordmark colored"></i>
+        <i class="devicon-rails-plain-wordmark colored"></i>
+        <i class="devicon-ruby-plain-wordmark colored"></i>
+        <i class="devicon-sass-original colored"></i>
+        <i class="devicon-slack-plain-wordmark colored"></i>
+
+
+
+      </div>
     </div>
     <div id="section_5" class="box">
       contacts
