--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <div id="section_1" class="box">
 
-        <div id="overlay">
+      <div id="overlay">
 
-          <div id="name">
+        <div id="name">
           <h1>Zabrina Lagamayo</h1>
           <h2>Web Developer</h2>
 
@@ -35,31 +35,33 @@
           </svg>
 
 
-          </div>
+        </div>
 
-    <svg id="home-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1400 300" preserveAspectRatio="none">
+        <svg id="home-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1400 300" preserveAspectRatio="none">
         <path class="p-curve" d="M-0.2,0.5c0,0-21.7,99.6,233.1,99.6s320.1,199.7,467.6,200.1S898.6,100,1167.6,100S1401,0,1401,0v301H0 L-0.2,0.5z"></path>
     </svg>
-    </div>
-    <nav>
-      <a id="1" class="active" href="#section_1">Home</a>
-      <a id="2" href="#section_2">About Me</a>
-      <a id="3" href="#section_3">Portfolio</a>
-      <a id="4" href="#section_4">Skills</a>
-      <a id="5" href="#section_5">Contacts</a>
+      </div>
+      <nav>
+        <a id="1" class="active" href="#section_1">Home</a>
+        <a id="2" href="#section_2">About Me</a>
+        <a id="3" href="#section_3">Portfolio</a>
+        <a id="4" href="#section_4">Skills</a>
+        <a id="5" href="#section_5">Contacts</a>
 
-    </nav>
+      </nav>
 
       <div id="section_2" class="box">
-        <img class="photo"src="images/zabrina4.png" alt="zabrina picture">
+        <img class="photo" src="images/zabrina4.png" alt="zabrina picture">
         <div class="about-me">
           <h2>About Me: Zabrina Lagamayo</h2>
           <p id="title">Web Developer</p>
-          <p>I am analytical and inquisitive by nature which has led me to the wonderful path of Web Development. While working as a Market Researcher, I taught myself how to code VBA to improve work efficiencies. I then tried to teach myself JavaScript, Python and also dabbled a bit in trying to create a mechanical arm in my spare time but I quickly realised I needed to learn the fundamentals of programming and so I joined General Assembly.</p>
-          <p>I have always liked the idea of creating. Since undergoing the Web Development Immersive Course in General Assembly, I have come to appreciate the ability to create even more. Being challenged, overcoming the challenge and seeing the product of hardwork gives me a great sense of achievement. I would love to work for a company that nurtures growth and learning. </p>
+          <p>I am analytical and inquisitive by nature which has led me to the wonderful path of Web Development. While working as a Market Researcher, I taught myself how to code VBA to improve work efficiencies. I then tried to teach myself JavaScript,
+            Python and also dabbled a bit in trying to create a mechanical arm in my spare time but I quickly realised I needed to learn the fundamentals of programming and so I joined General Assembly.</p>
+          <p>I have always liked the idea of creating. Since undergoing the Web Development Immersive Course in General Assembly, I have come to appreciate the ability to create even more. Being challenged, overcoming the challenge and seeing the product
+            of hardwork gives me a great sense of achievement. I would love to work for a company that nurtures growth and learning. </p>
           <div id="social">
             <a href="https://zabrinatan.github.io" target="_blank"><img src="images/portfolio.svg" alt="portfolio"></a>
-            <a href"https://github.com/zabrinatan" target="_blank"><img src="images/github.svg" alt="github"></a>
+            <a href "https://github.com/zabrinatan" target="_blank"><img src="images/github.svg" alt="github"></a>
             <a href="https://www.linkedin.com/in/zabrina-lagamayo/" target="_blank"><img src="images/linkedin.svg" alt="linkedin"></a>
             <a href="https://twitter.com/zabrinatan" target="_blank"><img src="images/twitter.svg" alt="linkedin"></a>
           </div>
@@ -68,114 +70,120 @@
 
 
       </div>
-    <div id="section_3" class="box">
-      <h1> Portfolio Work </h1>
-      <div class="portfolio-carousel">
-      <div id="tictactoe">
-      <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank"><video loop id = "video1"  autoplay>
+      <div id="section_3" class="box">
+        <h1> Portfolio Work </h1>
+        <div class="portfolio-carousel">
+          <div id="tictactoe">
+            <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank"><video loop id = "video1"  autoplay>
          <source src="images/tictactoe.mp4" type="video/mp4" />
       </video></a>
-      <div class="port-content">
-        <h3>Tic-Tac-Toe <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/tic-tac-toe" target="_blank">Github</a></h3>
-        <div class="tech"><span>jQuery</span> <span>HTML5/CSS3</span> <span>Javascript</span></div>
-        <p>This is the first project I have created. I have thoroughly enjoyed creating the logic of the game as well as playing around with design ideas. Through this project, I have improved my HTML/CSS and Javascript/JQuery Skills.</p>
+            <div class="port-content">
+              <h2>Tic-Tac-Toe</h2><a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/tic-tac-toe" target="_blank">Github</a>
+                    <p>My iteration of the game allows two players to play against each other. The first player is asked to choose the icon they'd like to be represented as and the second player's icon will be dependent on the first player's icon choice.</p>
+              <div class="tech"><span>jQuery</span> <span>HTML5/CSS3</span> <span>Javascript</span></div>
 
 
 
 
-      </div>
 
-    </div>
+            </div>
 
-    <div id="dashboard">
-    <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank"><video loop id = "video2"  autoplay>
+          </div>
+
+          <div id="dashboard">
+            <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank"><video loop id = "video2"  autoplay>
        <source src="images/dashboard.mp4" type="video/mp4" />
     </video></a>
-    <div class="port-content">
-      <h3>Travel-Book <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/travel_book" target="_blank">Github</a></h3>
-        <div class="tech"><span>jQuery</span><span>HTML5/CSS3</span> <span>Ruby on Rails</span><span>PostgreSQL</span><span>Javascript</span><span>Google Geocoder API</span><span>Google Maps API</span> <span>Google Places API</span><span>Openweathermap API</span><span>Flickr Images</span></div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatum voluptate doloribus, sunt, necessitatibus, quia illo sequi ex quaerat aliquam laboriosam. Inventore mollitia, ratione incidunt rerum illo, minima alias dolorem.</p></div>
-  </div>
+            <div class="port-content">
+              <h2>Travel-Book </h2><a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/travel_book" target="_blank">Github</a>
+                    <p>Travel Book is a travel tool designed to allow users to access information based on location searches. This application has a dashboard functionality where users can save searches and allow them to plan future travels. </p>
+              <div class="tech"><span>jQuery</span><span>HTML5/CSS3</span> <span>Ruby on Rails</span><span>PostgreSQL</span><span>Javascript</span><span>Google Geocoder API</span><span>Google Maps API</span> <span>Google Places API</span><span>Openweathermap API</span><span>Flickr Images</span></div>
 
-  <div id="meetyou">
-  <a href="https://todo-meetyou.herokuapp.com/" target="_blank"><video loop id = "video3">
+            </div>
+          </div>
+
+          <div id="meetyou">
+            <a href="https://todo-meetyou.herokuapp.com/" target="_blank"><video loop id = "video3">
      <source src="images/meetyou.mp4" type="video/mp4" />
   </video></a>
-  <div class="port-content">
-    <h3>Todo: Meet you <a href="https://todo-meetyou.herokuapp.com/" target="_blank">Live Site</a> |
-    <a href="https://github.com/zabrinatan/dating-web" target="_blank">Github</a></h3>
-            <div class="tech"><span>jQuery</span> <span>HTML5/SassyCSS</span> <span>Ruby on Rails</span><span>PostgreSQL</span><span>Javascript</span><span>AJAX</span><span>Google Maps API</span> <span>Slick.js</span><span>Open Trivia Database API</span><span>Cloudinary</span><span>Attachinary</span></div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatum voluptate doloribus, sunt, necessitatibus, quia illo sequi ex quaerat aliquam laboriosam. Inventore mollitia, ratione incidunt rerum illo, minima alias dolorem.</p></div>
+            <div class="port-content">
+              <h2>Todo: Meet you</h2> <a href="https://todo-meetyou.herokuapp.com/" target="_blank">Live Site</a> |
+    <a href="https://github.com/zabrinatan/dating-web" target="_blank">Github</a>
+                  <p> TODO:Meet you is a dating site catered towards singles in the tech industry. Users can browse profiles, like and unlike users and message matched profiles. </p>
+              <div class="tech"><span>jQuery</span> <span>HTML5/SassyCSS</span> <span>Ruby on Rails</span><span>PostgreSQL</span><span>Javascript</span><span>AJAX</span><span>Google Maps API</span> <span>Slick.js</span><span>Open Trivia Database API</span><span>Cloudinary</span><span>Attachinary</span></div>
 
-  </div>
+            </div>
+
+          </div>
 
 
-<div id="loseit">
-<a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank"><video loop id = "video4">
+          <div id="loseit">
+            <a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank"><video loop id = "video4">
    <source src="images/loseit.mp4" type="video/mp4" />
 </video></a>
-<div class="port-content">
-  <h3>Lose it! <a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/lose-it-client" target="_blank">Github</a></h3>
-  <div class="tech"><span>React.js</span><span>Ruby on Rails</span><span>PostgreSQL</span><span>HTML5/CSS3</span> <span>Javascript</span><span>Edamam Recipe API</span></div>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatum voluptate doloribus, sunt, necessitatibus, quia illo sequi ex quaerat aliquam laboriosam. Inventore mollitia, ratione incidunt rerum illo, minima alias dolorem.</p></div>
+            <div class="port-content">
+              <h2>Lose it! </h2><a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/lose-it-client" target="_blank">Github</a>
+                    <p>Lose it! is a recipe website designed for people who want to lose weight. Users can search for recipes and build customisable mealplans for the whole week.</p>
+              <div class="tech"><span>React.js</span><span>Ruby on Rails</span><span>PostgreSQL</span><span>HTML5/CSS3</span> <span>Javascript</span><span>Edamam Recipe API</span></div>
 
-</div>
+            </div>
 
-<div id="portfolio">
-<a href="https://zabrinatan.github.io/" target="_blank">
+          </div>
+
+          <div id="portfolio">
+            <a href="https://zabrinatan.github.io/" target="_blank">
    <img src="images/portfolio.png"/>
 </a>
-<div class="port-content">
-  <h3>Portfolio <a href="https://zabrinatan.github.io/" target="_blank">Live Site</a> |
-  <a href="https://github.com/zabrinatan/zabrinatan.github.io" target="_blank">Github</a></h3>
-  <div class="tech"><span>JQuery</span><span>Javascript</span><span>HTML5/CSS3</span> <span>Slick.js</span></div>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatum voluptate doloribus, sunt, necessitatibus, quia illo sequi ex quaerat aliquam laboriosam. Inventore mollitia, ratione incidunt rerum illo, minima alias dolorem.</p></div>
+            <div class="port-content">
+              <h2>Portfolio </h2><a href="https://zabrinatan.github.io/" target="_blank">Live Site</a> |
+  <a href="https://github.com/zabrinatan/zabrinatan.github.io" target="_blank">Github</a>
+            <p>My Portfolio where you can find out things about me!</p>
+              <div class="tech"><span>JQuery</span><span>Javascript</span><span>HTML5/CSS3</span> <span>Slick.js</span></div>
 
-</div>
-</div>
-</div>
+            </div>
 
-
-    <div id="section_4" class="box">
-      <h1>Tech Skills</h1>
-      <div class="icons">
-        <i class="devicon-atom-original-wordmark colored"></i>
-        <i class="devicon-bootstrap-plain-wordmark colored"></i>
-        <i class="devicon-css3-plain-wordmark colored"></i>
-        <i class="devicon-git-plain-wordmark colored"></i>
-        <i class="devicon-github-plain-wordmark colored"></i>
-        <i class="devicon-heroku-plain-wordmark colored"></i>
-        <i class="devicon-html5-plain-wordmark colored"></i>
-        <i class="devicon-javascript-plain colored"></i>
-        <i class="devicon-jquery-plain-wordmark colored"></i>
-        <i class="devicon-postgresql-plain-wordmark colored"></i>
-        <i class="devicon-react-original-wordmark colored"></i>
-        <i class="devicon-rails-plain-wordmark colored"></i>
-        <i class="devicon-ruby-plain-wordmark colored"></i>
-        <i class="devicon-sass-original colored"></i>
-        <i class="devicon-slack-plain-wordmark colored"></i>
-
-
-
+          </div>
+        </div>
       </div>
+
+
+      <div id="section_4" class="box">
+        <h1>Tech Skills</h1>
+        <div class="icons">
+          <i class="devicon-atom-original-wordmark colored"></i>
+          <i class="devicon-bootstrap-plain-wordmark colored"></i>
+          <i class="devicon-css3-plain-wordmark colored"></i>
+          <i class="devicon-git-plain-wordmark colored"></i>
+          <i class="devicon-github-plain-wordmark colored"></i>
+          <i class="devicon-heroku-plain-wordmark colored"></i>
+          <i class="devicon-html5-plain-wordmark colored"></i>
+          <i class="devicon-javascript-plain colored"></i>
+          <i class="devicon-jquery-plain-wordmark colored"></i>
+          <i class="devicon-postgresql-plain-wordmark colored"></i>
+          <i class="devicon-react-original-wordmark colored"></i>
+          <i class="devicon-rails-plain-wordmark colored"></i>
+          <i class="devicon-ruby-plain-wordmark colored"></i>
+          <i class="devicon-sass-original colored"></i>
+          <i class="devicon-slack-plain-wordmark colored"></i>
+
+
+
+        </div>
+      </div>
+      <div id="section_5" class="box">
+        contacts
+      </div>
+
+
+
+
+
+
+
+
+
+
     </div>
-    <div id="section_5" class="box">
-      contacts
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-  </div>
 
 </body>
 
