added transition on nav change

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
      <source src="images/meetyou.mp4" type="video/mp4" />
   </video></a>
             <div class="port-content">
-              <h2>Todo: Meet you</h2> <a href="https://todo-meetyou.herokuapp.com/" target="_blank">Live Site</a> |
+              <h2>TODO: Meet you</h2> <a href="https://todo-meetyou.herokuapp.com/" target="_blank">Live Site</a> |
     <a href="https://github.com/zabrinatan/dating-web" target="_blank">Github</a>
                   <p> TODO:Meet you is a dating site catered towards singles in the tech industry. Users can browse profiles, like and unlike users and message matched profiles. </p>
               <div class="tech"><span>jQuery</span> <span>HTML5/SassyCSS</span> <span>Ruby on Rails</span><span>PostgreSQL</span><span>Javascript</span><span>AJAX</span><span>Google Maps API</span> <span>Slick.js</span><span>Open Trivia Database API</span><span>Cloudinary</span><span>Attachinary</span></div>
