added some contact details

--- a/index.html
+++ b/index.html
@@ -171,7 +171,18 @@
         </div>
       </div>
       <div id="section_5" class="box">
-        contacts
+        <h1>Get in touch!</h1>
+        <div class="contact">
+          <div class="mail">
+        <img src="images/envelope.svg" alt="envelope">
+          <a href="mailto:zabrinatan@hotmail.com">zabrinatan@hotmail.com</a>
+        </div>
+        <div class="phone">
+        <img src="images/phone.svg" alt="phone">
+        <p>0420939029</p>
+
+        </div>
+        </div>
       </div>
 
 
