added resume link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
       </nav>
 
       <div id="section_2" class="box">
+        <div class="image-button">
         <img class="photo" src="images/zabrina4.png" alt="zabrina picture">
+        <button id="resume">View my Resume</button>
+        </div>
         <div class="about-me">
           <h2>About Me: Zabrina Lagamayo</h2>
           <p id="title">Web Developer</p>
@@ -138,7 +141,7 @@
               <h2>Portfolio </h2><a href="https://zabrinatan.github.io/" target="_blank">Live Site</a> |
   <a href="https://github.com/zabrinatan/zabrinatan.github.io" target="_blank">Github</a>
             <p>My Portfolio where you can find out things about me!</p>
-              <div class="tech"><span>JQuery</span><span>Javascript</span><span>HTML5/CSS3</span> <span>Slick.js</span></div>
+              <div class="tech"><span>jQuery</span><span>Javascript</span><span>HTML5/CSS3</span> <span>Slick.js</span></div>
 
             </div>
 
@@ -173,6 +176,7 @@
       <div id="section_5" class="box">
         <h1>Get in touch!</h1>
         <div class="contact">
+          <p>Get in touch with me in any of the following mediums. </p>
           <div class="mail">
         <img src="images/envelope.svg" alt="envelope">
           <a href="mailto:zabrinatan@hotmail.com">zabrinatan@hotmail.com</a>
