changed wording of about me and contacts in nav to contact

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a id="2" href="#section_2">About Me</a>
         <a id="3" href="#section_3">Portfolio</a>
         <a id="4" href="#section_4">Skills</a>
-        <a id="5" href="#section_5">Contacts</a>
+        <a id="5" href="#section_5">Contact</a>
 
       </nav>
 
@@ -64,10 +64,10 @@
         <div class="about-me">
           <h2>About Me: Zabrina Lagamayo</h2>
           <p id="title">Web Developer</p>
-          <p>I am analytical and inquisitive by nature which has led me to the wonderful path of Web Development. While working as a Market Researcher, I taught myself how to code VBA to improve work efficiencies. I then tried to teach myself JavaScript,
+          <p>I am analytical and inquisitive by nature which has led me to the wonderful path of Web Development. Whilst working as a Market Researcher, I taught myself VBA to generate workflow efficiencies. I then tried to teach myself JavaScript,
             Python and also dabbled a bit in trying to create a mechanical arm in my spare time but I quickly realised I needed to learn the fundamentals of programming and so I joined General Assembly.</p>
-          <p>I have always liked the idea of creating. Since undergoing the Web Development Immersive Course in General Assembly, I have come to appreciate the ability to create even more. Being challenged, overcoming the challenge and seeing the product
-            of hardwork gives me a great sense of achievement. I would love to work for a company that nurtures growth and learning. </p>
+          <p>I have always liked the idea of creating. Since undertaking the Web Development Immersive Course in General Assembly, I have come to appreciate the ability to create even more. Being challenged, overcoming the challenge and seeing the byproduct
+            of hard work gives me a great sense of achievement. I would love to work for a company that nurtures growth and learning. </p>
 
 
         </div>
