--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       </div>
       <div id="section_3" class="box">
         <h1> Portfolio Work </h1>
+        <div id="arrow-buttons"></div>
         <div class="portfolio-carousel">
           <div id="tictactoe">
             <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank"><video loop id = "video1"  autoplay>
