added name at nav

--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
 
       </div>
       <nav>
+        <div class="tag">Zabrina L </div>
+
         <a id="1" class="active" href="#section_1">Home</a>
         <a id="2" href="#section_2">About Me</a>
         <a id="3" href="#section_3">Portfolio</a>
         <a id="4" href="#section_4">Skills</a>
         <a id="5" href="#section_5">Contact</a>
-
       </nav>
 
       <div id="section_2" class="box">
@@ -80,7 +81,7 @@
         <div id="arrow-buttons"></div>
         <div class="portfolio-carousel">
           <div id="tictactoe">
-            <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank"><video loop id = "video1"  autoplay>
+            <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank"><video loop id = "video1" class="video"  autoplay>
          <source src="images/tictactoe.mp4" type="video/mp4" />
       </video></a>
             <div class="port-content">
@@ -97,7 +98,7 @@
           </div>
 
           <div id="dashboard">
-            <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank"><video loop id = "video2"  autoplay>
+            <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank"><video loop id = "video2"  class="video" autoplay>
        <source src="images/dashboard.mp4" type="video/mp4" />
     </video></a>
             <div class="port-content">
@@ -109,7 +110,7 @@
           </div>
 
           <div id="meetyou">
-            <a href="https://todo-meetyou.herokuapp.com/" target="_blank"><video loop id = "video3">
+            <a href="https://todo-meetyou.herokuapp.com/" target="_blank"><video loop id = "video3" class="video">
      <source src="images/meetyou.mp4" type="video/mp4" />
   </video></a>
             <div class="port-content">
@@ -124,7 +125,7 @@
 
 
           <div id="loseit">
-            <a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank"><video loop id = "video4">
+            <a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank"><video loop id = "video4" class="video">
    <source src="images/loseit.mp4" type="video/mp4" />
 </video></a>
             <div class="port-content">
