fixed github link

--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
         <button id="resume">View my Resume</button>
         <div id="social">
           <a href="https://zabrinatan.github.io" target="_blank"><img src="images/portfolio.svg" alt="portfolio"></a>
-          <a href "https://github.com/zabrinatan" target="_blank"><img src="images/github.svg" alt="github"></a>
+          <a href="https://github.com/zabrinatan" target="_blank"><img src="images/github.svg" alt="github"></a>
           <a href="https://www.linkedin.com/in/zabrina-lagamayo/" target="_blank"><img src="images/linkedin.svg" alt="linkedin"></a>
           <a href="https://twitter.com/zabrinatan" target="_blank"><img src="images/twitter.svg" alt="linkedin"></a>
-
         </div>
         </div>
         <div class="about-me">
