turned all videos to gifs

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         <div id="arrow-buttons"></div>
         <div class="portfolio-carousel">
           <div id="tictactoe">
-            <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank"><video loop id = "video1" class="video"  autoplay>
-         <source src="images/tictactoe.mp4" type="video/mp4" />
-      </video></a>
+            <a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">
+               <img src="images/tictactoe.gif"/>
+              </a>
             <div class="port-content">
               <h2>Tic-Tac-Toe</h2><a href="https://zabrinatan.github.io/tic-tac-toe/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/tic-tac-toe" target="_blank">Github</a>
                     <p>My iteration of the game allows two players to play against each other. The first player is asked to choose the icon they'd like to be represented as and the second player's icon will be dependent on the first player's icon choice.</p>
@@ -97,9 +97,11 @@
           </div>
 
           <div id="dashboard">
-            <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank"><video loop id = "video2"  class="video" autoplay>
-       <source src="images/dashboard.mp4" type="video/mp4" />
-    </video></a>
+            <a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank">
+              <img src="images/dashboard.gif"/>
+
+
+            </a>
             <div class="port-content">
               <h2>Travel-Book </h2><a href="https://sleepy-depths-56530.herokuapp.com/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/travel_book" target="_blank">Github</a>
                     <p>Travel Book is a travel tool designed to allow users to access information based on location searches. This application has a dashboard functionality where users can save searches and allow them to plan future travels. </p>
@@ -109,9 +111,10 @@
           </div>
 
           <div id="meetyou">
-            <a href="https://todo-meetyou.herokuapp.com/" target="_blank"><video loop id = "video3" class="video">
-     <source src="images/meetyou.mp4" type="video/mp4" />
-  </video></a>
+            <a href="https://todo-meetyou.herokuapp.com/" target="_blank">
+              <img src="images/meetyou.gif"/>
+
+            </a>
             <div class="port-content">
               <h2>TODO: Meet you</h2> <a href="https://todo-meetyou.herokuapp.com/" target="_blank">Live Site</a> |
     <a href="https://github.com/zabrinatan/dating-web" target="_blank">Github</a>
@@ -124,9 +127,10 @@
 
 
           <div id="loseit">
-            <a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank"><video loop id = "video4" class="video">
-   <source src="images/loseit.mp4" type="video/mp4" />
-</video></a>
+            <a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">
+              <img src="images/loseit.gif"/>
+
+            </a>
             <div class="port-content">
               <h2>Lose it! </h2><a href="https://zabrinatan.github.io/lose-it-client/#/" target="_blank">Live Site</a> | <a href="https://github.com/zabrinatan/lose-it-client" target="_blank">Github</a>
                     <p>Lose it! is a recipe website designed for people who want to lose weight. Users can search for recipes and build customisable mealplans for the whole week.</p>
@@ -137,9 +141,9 @@
           </div>
 
           <div id="portfolio">
-            <a href="https://zabrinatan.github.io/" target="_blank">
+
    <img src="images/portfolio.png"/>
-</a>
+  
             <div class="port-content">
               <h2>Portfolio </h2><a href="https://zabrinatan.github.io/" target="_blank">Live Site</a> |
   <a href="https://github.com/zabrinatan/zabrinatan.github.io" target="_blank">Github</a>
